Fix layouts, add gitignores for code workspace
* fix the height of rows in both columns to prevent misalignment
* shorten the task summary header and make it fixed height

--- a/src/components/Timer/Timer.module.scss
+++ b/src/components/Timer/Timer.module.scss
@@ -1,4 +1,7 @@
-$summary-row-item-height: 18px;
+$row-item-height: 1.85em;
+$tictac-width: 10px;
+$tictac-height: 1.35em;
+$tictac-margin: 2px 2px 2px 2px;
 
 .Timer {
   .content {
@@ -29,23 +32,34 @@ $summary-row-item-height: 18px;
 
   }
 
-  .grid_summary {
+  .summary_cell {
+    height: $row-item-height;
     display: grid;
     grid-template-columns: 98%;
   }
 
   .grid_ticks {
+
     display: grid;
     grid-template-columns: repeat(96, 18px);
   }
 
+  .summary_header {
+    height: $row-item-height;
+
+    display: grid;
+    grid-template-columns: 100%;
+  }
+
   .tictac_header_row {
+    height: $row-item-height;
+
     display: grid;
     grid-template-columns: repeat(24, 72px);
   }
 
   .tictac_cell {
-    height: 26px;
+    height: $row-item-height;
     background-color: lightblue;
   }
 
@@ -63,17 +77,17 @@ $summary-row-item-height: 18px;
   }
 
   .tictac_empty {
-    width: 10px;
-    height: $summary-row-item-height;
-    margin: 2px 2px 2px 2px;
+    width: $tictac-margin;
+    height: $tictac-height;
+    margin: $tictac-margin;
     border-radius: 3px;
     border: 2px solid darkgray;
   }
 
   .tictac_distracted {
-    width: 10px;
-    height: $summary-row-item-height;
-    margin: 2px 2px 2px 2px;
+    width: $tictac-margin;
+    height: $tictac-height;
+    margin: $tictac-margin;
     border-radius: 3px;
     border:2px solid darkgray;
     position:relative;
@@ -90,9 +104,9 @@ $summary-row-item-height: 18px;
   }
 
   .tictac_focused {
-    width: 10px;
-    height: $summary-row-item-height;
-    margin: 2px 2px 2px 2px;
+    width: $tictac-margin;
+    height: $tictac-height;
+    margin: $tictac-margin;
     border-radius: 3px;
     background-color: darkslategray;
     border: 2px solid darkgray;
@@ -109,7 +123,7 @@ $input-font-color: #333;
 
   input[type="text"] {
     flex: 1;
-    height: $summary-row-item-height + 2px;
+
     margin: 2px;
 
     border: none;
